added multiple feature and logic

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,3 +3,12 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+@font-face {
+  font-family: "jersey";
+  src: url("../app/fonts/Jersey10-Regular.ttf");
+}
+
+body {
+  font-family: "jersey";
+}
